@@ -1,8 +1,8 @@
-name: ish_drupal_module
+name: wco_drupal_module
 type: module
 version: VERSION
 core_version_requirement: ^9
-description: Ish Locations and more.
+description: descr
 dependencies:
   - drupal:views
 
