@@ -8,10 +8,10 @@
  * If you change this method, clear theme registry and routing
  * table 'drush cc theme-registry' and 'drush cc router'.
 **/
-function ish_drupal_module_theme($existing, $type, $theme, $path) {
+function wco_drupal_module_theme($existing, $type, $theme, $path) {
 
   return [
-    'ish_locations_show' => [
+    'wco_locations_show' => [
       'render element' => 'requirements',
       'template' => 'show',
       'path' => $path . '/templates/locations',
